--- a/alphaUkeBox/www/templates/login.html
+++ b/alphaUkeBox/www/templates/login.html
@@ -1,25 +1,25 @@
-<ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
+<ion-view title="Login">
+  <ion-content overflow-scroll="true" padding="true" class="has-header main-defaults">
+
+    <div class="logo-large"></div>
+
+    <div class="bottom-pin-button">
+      <form class="list" ng-submit="doLogin()">
+        <div class="form-wrapper">
+          <ion-list>
+            <label class="item item-input form-fields top">
+              <span class="input-label light-blue">Email</span>
+              <input type="text" placeholder="" ng-model="loginData.email">
+            </label>
+            <label class="item item-input form-fields bottom">
+              <span class="input-label light-blue">Password</span>
+              <input type="password" placeholder="" ng-model="loginData.password">
+            </label>
+          </ion-list>
+        </div>
+        <button class="button button-energized button-block button-block" type="submit">LOGIN</button>
+        <a ui-sref="join" class="button button-light button-clear button-block button-small icon ion-android-person-add">JOIN THE PACK</a>
+      </form>
     </div>
-  </ion-header-bar>
-  <ion-content>
-    <form ng-submit="doLogin()">
-      <div class="list">
-        <label class="item item-input">
-          <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
-        </label>
-        <label class="item item-input">
-          <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password">
-        </label>
-        <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
-        </label>
-      </div>
-    </form>
   </ion-content>
-</ion-modal-view>
+</ion-view>
