login should be working now... time to test?

--- a/alphaUkeBox/www/templates/inside.html
+++ b/alphaUkeBox/www/templates/inside.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-header-bar align-title="center" class="bar-positive">
-    <h1 class="title">If you see this, you're logged in!</h1>
+    <h1 class="title">Wow, You're logged in!</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="logout()">Logout</button>
     </div>
