update: everything is working

--- a/alphaUkeBox/www/templates/inside.html
+++ b/alphaUkeBox/www/templates/inside.html
@@ -15,7 +15,7 @@
       Destroy User's Token
     </button>
     <button class="button button-full button-balanced" ng-click="getInfo()">
-      Get Information about User
+      Welcome!
     </button>
   </ion-content>
 </ion-view>
